--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,6 +2,7 @@
   display: inline-block;
   padding: 10px 20px;
   font-size: 16px;
+  font-weight: bold;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -17,7 +18,7 @@
 
 .regular {
   background: transparent;
-  color: #343a40;
+  color: #808080;
 }
 
 .regular:hover {
