--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -27,7 +27,11 @@
   gap: 40px;
 }
 
-.headerAuth {
+.logo {
+  padding-right: 40px;
+}
+
+.headerCta {
   display: flex;
   flex-direction: row;
   align-items: center;
