--- a/src/components/Main/Hero/Hero.module.css
+++ b/src/components/Main/Hero/Hero.module.css
@@ -13,6 +13,9 @@
 }
 
 .headlineContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 90vw;
   height: 172px;
   padding: 0px 32px 0px 32px;
