--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -8,7 +8,7 @@
   cursor: pointer;
   text-align: center;
   text-decoration: none;
-  transition: font-weight 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 .button:disabled {
