--- a/src/components/Main/Hero/Hero.module.css
+++ b/src/components/Main/Hero/Hero.module.css
@@ -195,4 +195,79 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  gap: 40px;
+}
+
+.hiringContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-top: 40px;
+}
+
+.hiring {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  height: 194px;
+  padding: 0 32px 0 32px;
+}
+
+.hiringLabel {
+  gap: 8px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 30px;
+  color: #667085;
+}
+
+.hiringList {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 1280px;
+  height: 124px;
+  gap: 32px;
+}
+
+.hiringItem {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 296px;
+  gap: 12px;
+  opacity: 0px;  
+}
+
+.itemName {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px; 
+}
+
+.itemJobs {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 4px 12px 4px 10px;
+  gap: 6px;
+  border-radius: 16px; 
+  background: #ECFDF3;
+}
+
+.itemJobsText {
+  font-size: 14px;
+  font-weight: 500;
+  color: #027A48;
+}
+
+.itemJobsDot {
+  width: 10px;
+  height: 10px;
+  color: #12B76A;
 }
