--- a/src/components/Main/Hero/Hero.module.css
+++ b/src/components/Main/Hero/Hero.module.css
@@ -198,6 +198,7 @@
   align-items: center;
   width: 100%;
   gap: 40px;
+  padding-bottom: 80px;
 }
 
 .hiringContainer {
@@ -214,7 +215,6 @@
   justify-content: space-between;
   align-items: center;
   height: 194px;
-  padding: 0 32px 0 32px;
 }
 
 .hiringLabel {
