--- a/src/components/Main/Hero/DotMap/DotMap.module.css
+++ b/src/components/Main/Hero/DotMap/DotMap.module.css
@@ -2,15 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1,216px;
+  width: 90%;
   height: auto;
   gap: 32px;
   background-color: white;
   border: none;
-  padding: 20px;
+  padding: 0 20px;
 }
 
 .mapImage {
-  width: 1024px;
-  height: auto;
+  width: 95%;
 }
